<resources>
    <string name="app_name">DesignSupportLibrarySample</string>
    <string name="com_button_floatButton">FloatButton</string>
    <string name="floatButton_activity_name">FloatButton</string>
    <string name="main_java">JavaCode</string>
    <string name="main_kotlin">KotCode</string>

    <string name="com_button_navigation">NavigationView</string>
    <string name="com_button_coordinator">Coordinator</string>
    <string name="com_button_inputLayout">InputLayout</string>
    <string name="com_button_snackbar">Snackbar</string>
    <string name="com_button_fab">FAB</string>
    <string name="com_button_tablayout">tabLayout</string>
    <string name="com_button_viewpager">ViewPager</string>

    <string name="navigation_1">メイン</string>
    <string name="navigation_2">ソーシャル</string>
    <string name="navigation_3">プロモーション</string>
    <string name="navigation_4">スター付き</string>
    <string name="navigation_5">重要</string>
    <string name="navigation_6">その他</string>

    <string name="com_name">UserName</string>
    <string name="com_mail">example@gmail.com</string>
    <string name="com_sign_in">SignIn</string>

    <string name="navigation_open">OPEN</string>
    <string name="navigation_close">CLOSE</string>

    <string name="name_error_message">Enter your name</string>
    <string name="mail_error_message">Enter a valid email address</string>
    <string name="pass_error_message">Enter your password</string>
    <string name="inputLayout_snac_message">Welcome</string>
    <string name="action_sign_in">SignIn</string>

    <string name="coordinator_enterAlways">enterAlways</string>
    <string name="coordinator_enterAlwaysCollapsed">enterAlwaysCollapsed</string>
    <string name="coordinator_exitUntilCollapsed">exitUntilCollapsed</string>

    <string name="input_error_name">名前が短すぎます</string>
    <string name="input_error_mail">メールアドレス欄が空です</string>
    <string name="input_error_mail2">メールアドレスの形式が正しくありません</string>

    <string-array name="javaTitle">
        <item>FloatButton</item>
        <item>NavigationView</item>
        <item>Coordinator</item>
        <item>InputLayout</item>
        <item>Snackbar</item>
        <item>TabLayout</item>
        <item>ViewPager</item>
    </string-array>

    <string-array name="kotTitle">
        <item>FloatButton</item>
        <item>NavigationView</item>
        <item>Coordinator</item>
        <item>InputLayout</item>
        <item>Snackbar</item>
        <item>TabLayout</item>
    </string-array>

    <string-array name="dummy">
        <item>北海道</item>
        <item>青森県</item>
        <item>岩手県</item>
        <item>宮城県</item>
        <item>秋田県</item>
        <item>山形県</item>
        <item>福島県</item>
        <item>茨城県</item>
        <item>栃木県</item>
        <item>群馬県</item>
        <item>埼玉県</item>
        <item>千葉県</item>
        <item>東京都</item>
        <item>神奈川県</item>
        <item>新潟県</item>
        <item>富山県</item>
        <item>石川県</item>
        <item>福井県</item>
        <item>山梨県</item>
        <item>長野県</item>
        <item>岐阜県</item>
        <item>静岡県</item>
        <item>愛知県</item>
        <item>三重県</item>
        <item>滋賀県</item>
        <item>京都府</item>
        <item>大阪府</item>
        <item>兵庫県</item>
        <item>奈良県</item>
        <item>和歌山県</item>
        <item>鳥取県</item>
        <item>島根県</item>
        <item>岡山県</item>
        <item>広島県</item>
        <item>山口県</item>
        <item>徳島県</item>
        <item>香川県</item>
        <item>愛媛県</item>
        <item>高知県</item>
        <item>福岡県</item>
        <item>佐賀県</item>
        <item>長崎県</item>
        <item>熊本県</item>
        <item>大分県</item>
        <item>宮崎県</item>
        <item>鹿児島県</item>
        <item>沖縄県</item>
    </string-array>
    <string name="title_activity_kt_scrolling">ktScrollingActivity</string>

</resources>
