<?xml version="1.0" encoding="utf-8"?>
<wacode.yuki.designsupportlibrarysample.kotCode.CoordinatorLayout.Container.CoordinatorContainer xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container"
    tools:context="wacode.yuki.designsupportlibrarysample.kotCode.CoordinatorLayout.ktCoordinatorLayoutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/buttonLayout">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:text="@string/coordinator_enterAlways"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:text="@string/coordinator_enterAlwaysCollapsed"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:text="@string/coordinator_exitUntilCollapsed"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"/>
    </LinearLayout>
    <include
        layout="@layout/layout_coordinator_euc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/euc"></include>
    <include
        layout="@layout/layout_coordinator_ea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ea"></include>
    <include
        layout="@layout/layout_coordinator_eac"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/eac"></include>
</wacode.yuki.designsupportlibrarysample.kotCode.CoordinatorLayout.Container.CoordinatorContainer>
